<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inputMyInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firsName"
            android:textSize="24dp"
            android:id="@+id/firsName"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="24dp"
            android:id="@+id/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            android:textSize="24dp"
            android:id="@+id/lastName"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="24dp"
            android:id="@+id/age"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job"
            android:textSize="24dp"
            android:id="@+id/job"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textSize="24dp"
            android:id="@+id/post"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Номер телефона"
            android:textSize="24dp"
            android:id="@+id/myPhone"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:text="@string/myInfo"
            android:textSize="24dp"
            android:id="@+id/myInfo"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="24dp"
            android:id="@+id/save"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>